# openai-agent

./: README.md  pyproject.toml
openai_agent/: completions.py  functions.py  messages.py
