[tool.poetry]
name = "openai-agent"
version = "0.1.0"
description = ""
authors = ["-LAN- <laipz8200@outlook.com>"]
readme = "README.md"
packages = [{include = "openai_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
